# serializer version: 1
# name: TestPostUpdateView.test_button_visibility_for_user[False-StaffUserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
                              <div class="form-group col-auto">
                                  <input class="btn btn-primary" type="submit" value="Publier"/>
                              </div>
                              
                              
                                  <div class="form-group col-auto">
                                      <a class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button" value="Supprimer">Supprimer</a>
                                  </div>
                              
                          </div>
  '''
# ---
# name: TestPostUpdateView.test_button_visibility_for_user[True-StaffUserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
                              <div class="form-group col-auto">
                                  <input class="btn btn-primary" type="submit" value="Publier"/>
                              </div>
                              
                              
                                  <div class="form-group col-auto">
                                      <a class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button" value="Supprimer">Supprimer</a>
                                  </div>
                              
                          </div>
  '''
# ---
# name: TestPostUpdateView.test_button_visibility_for_user[True-UserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
                              <div class="form-group col-auto">
                                  <input class="btn btn-primary" type="submit" value="Publier"/>
                              </div>
                              
                              
                                  <div class="form-group col-auto">
                                      <a class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button" value="Supprimer">Supprimer</a>
                                  </div>
                              
                          </div>
  '''
# ---
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Adam O.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestTopicListView.test_anonymous_content[anonymous_action_box]
  '''
  <section class="s-section" id="action-box">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <div class="c-box mb-5">
                              <div class="row">
                                  <div class="col-lg col-12 mb-3">Je me connecte pour accéder à toutes mes thématiques</div>
                                  <div class="col-lg-auto col-12">
  
  
      <a class="btn btn-outline-primary btn-ico btn-block" href="/users/login/?next=%2Ftopics%2F">Se connecter | S'inscrire</a>
  
  </div>
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </section>
  '''
# ---
# name: TestTopicListView.test_clickable_tags[10-query_param1-clickable_tags_page2][clickable_tags_page2]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_clickable_tags[None-query_param0-clickable_tags_page1][clickable_tags_page1]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_filter_dropdown_with_tags[filter_dropdown_with_tags]
  '''
  <div class="dropdown-menu dropdown-menu-end" id="filterTopicsDropdown">
                          <ul class="list-unstyled">
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">les plus récentes</button>
                                  </li>
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=NEW&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">en attente de réponse</button>
                                  </li>
                              
                          </ul>
                      </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[ALL-<lambda>-None][ALL-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[NEW-<lambda>-<lambda>][NEW-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      en attente de réponse
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[-<lambda>-None][-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[buckley-<lambda>-<lambda>][buckley-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>buckley
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[tag-<lambda>-<lambda>][tag-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>tag
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: TestTopicUpdateView.test_button_visibility_for_user[False-StaffUserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
          <div class="form-group col-auto">
              <input class="btn btn-primary matomo-event" data-matomo-action="contribute" data-matomo-category="engagement" data-matomo-option="submit_topic" type="submit" value="Publier"/>
          </div>
          
              
              
                  <div class="form-group col-auto">
                      <a aria-label="Supprimer" class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button">Supprimer</a>
                  </div>
              
          
      </div>
  '''
# ---
# name: TestTopicUpdateView.test_button_visibility_for_user[True-StaffUserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
          <div class="form-group col-auto">
              <input class="btn btn-primary matomo-event" data-matomo-action="contribute" data-matomo-category="engagement" data-matomo-option="submit_topic" type="submit" value="Publier"/>
          </div>
          
              
              
                  <div class="form-group col-auto">
                      <a aria-label="Supprimer" class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button">Supprimer</a>
                  </div>
              
          
      </div>
  '''
# ---
# name: TestTopicUpdateView.test_button_visibility_for_user[True-UserFactory][form-actions-buttons]
  '''
  <div class="form-actions form-row">
          <div class="form-group col-auto">
              <input class="btn btn-primary matomo-event" data-matomo-action="contribute" data-matomo-category="engagement" data-matomo-option="submit_topic" type="submit" value="Publier"/>
          </div>
          
              
              
                  <div class="form-group col-auto">
                      <a aria-label="Supprimer" class="btn btn-outline-danger" href="/forum/[forum-slug-pk]/topic/[topic-slug-pk]/[PK of Post]/post/delete/" role="button">Supprimer</a>
                  </div>
              
          
      </div>
  '''
# ---
# name: TopicViewTest.test_queries
  dict({
    'num_queries': 38,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
          'MarkAsSeenLoggedUserMiddleware.process_request[users/middleware.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'MarkAsSeenLoggedUserMiddleware.process_request[users/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."email",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."identity_provider"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'EmailLastSeenQuerySet.seen[users/models.py]',
          'MarkAsSeenLoggedUserMiddleware.process_request[users/middleware.py]',
        ]),
        'sql': '''
          INSERT INTO "users_emaillastseen" ("email",
                                             "email_hash",
                                             "last_seen_at",
                                             "last_seen_kind",
                                             "missyou_send_at",
                                             "deleted_at")
          VALUES (%s, %s, %s, %s, %s, %s) ON CONFLICT("email") DO
          UPDATE
          SET "last_seen_at" = EXCLUDED."last_seen_at",
              "last_seen_kind" = EXCLUDED."last_seen_kind",
              "missyou_send_at" = EXCLUDED."missyou_send_at" RETURNING "users_emaillastseen"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'TopicView.get_topic[forum_conversation/views.py]',
          'TopicView.check_permissions[<site-packages>/machina/apps/forum_permission/viewmixins.py]',
        ]),
        'sql': '''
          SELECT "forum_conversation_topic"."id",
                 "forum_conversation_topic"."forum_id",
                 "forum_conversation_topic"."poster_id",
                 "forum_conversation_topic"."subject",
                 "forum_conversation_topic"."slug",
                 "forum_conversation_topic"."type",
                 "forum_conversation_topic"."status",
                 "forum_conversation_topic"."approved",
                 "forum_conversation_topic"."posts_count",
                 "forum_conversation_topic"."views_count",
                 "forum_conversation_topic"."last_post_on",
                 "forum_conversation_topic"."first_post_id",
                 "forum_conversation_topic"."last_post_id",
                 "forum_conversation_topic"."created",
                 "forum_conversation_topic"."updated",
                 "forum_forum"."id",
                 "forum_forum"."created",
                 "forum_forum"."updated",
                 "forum_forum"."parent_id",
                 "forum_forum"."name",
                 "forum_forum"."slug",
                 "forum_forum"."description",
                 "forum_forum"."link",
                 "forum_forum"."link_redirects",
                 "forum_forum"."type",
                 "forum_forum"."direct_posts_count",
                 "forum_forum"."direct_topics_count",
                 "forum_forum"."link_redirects_count",
                 "forum_forum"."last_post_id",
                 "forum_forum"."last_post_on",
                 "forum_forum"."display_sub_forum_list",
                 "forum_forum"."short_description",
                 "forum_forum"."image",
                 "forum_forum"."certified",
                 "forum_forum"."partner_id",
                 "forum_forum"."_description_rendered",
                 "forum_forum"."lft",
                 "forum_forum"."rght",
                 "forum_forum"."tree_id",
                 "forum_forum"."level"
          FROM "forum_conversation_topic"
          INNER JOIN "forum_forum" ON ("forum_conversation_topic"."forum_id" = "forum_forum"."id")
          WHERE "forum_conversation_topic"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.check_permissions[<site-packages>/machina/apps/forum_permission/viewmixins.py]',
        ]),
        'sql': '''
          SELECT "forum_permission_userforumpermission"."id",
                 "forum_permission_userforumpermission"."permission_id",
                 "forum_permission_userforumpermission"."has_perm",
                 "forum_permission_userforumpermission"."forum_id",
                 "forum_permission_userforumpermission"."user_id",
                 "forum_permission_userforumpermission"."anonymous_user",
                 "forum_permission_userforumpermission"."authenticated_user",
                 "forum_permission_forumpermission"."id",
                 "forum_permission_forumpermission"."codename"
          FROM "forum_permission_userforumpermission"
          INNER JOIN "forum_permission_forumpermission" ON ("forum_permission_userforumpermission"."permission_id" = "forum_permission_forumpermission"."id")
          WHERE (("forum_permission_userforumpermission"."forum_id" IS NULL
                  OR "forum_permission_userforumpermission"."forum_id" IN (%s))
                 AND ("forum_permission_userforumpermission"."authenticated_user"
                      OR "forum_permission_userforumpermission"."user_id" = %s))
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.check_permissions[<site-packages>/machina/apps/forum_permission/viewmixins.py]',
        ]),
        'sql': '''
          SELECT "forum_permission_groupforumpermission"."id",
                 "forum_permission_groupforumpermission"."permission_id",
                 "forum_permission_groupforumpermission"."has_perm",
                 "forum_permission_groupforumpermission"."forum_id",
                 "forum_permission_groupforumpermission"."group_id",
                 "forum_permission_forumpermission"."id",
                 "forum_permission_forumpermission"."codename",
                 "auth_group"."id",
                 "auth_group"."name"
          FROM "forum_permission_groupforumpermission"
          INNER JOIN "auth_group" ON ("forum_permission_groupforumpermission"."group_id" = "auth_group"."id")
          INNER JOIN "users_user_groups" ON ("auth_group"."id" = "users_user_groups"."group_id")
          INNER JOIN "forum_permission_forumpermission" ON ("forum_permission_groupforumpermission"."permission_id" = "forum_permission_forumpermission"."id")
          WHERE ("users_user_groups"."user_id" = %s
                 AND ("forum_permission_groupforumpermission"."forum_id" IS NULL
                      OR "forum_permission_groupforumpermission"."forum_id" IN (%s)))
        ''',
      }),
      dict({
        'origin': list([
          'NotificationQuerySet.mark_topic_posts_read[notification/models.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          UPDATE "notification_notification"
          SET "sent_at" = "notification_notification"."created"
          WHERE ("notification_notification"."post_id" IN
                   (SELECT U0."id" AS "id"
                    FROM "forum_conversation_post" U0
                    WHERE U0."topic_id" = %s)
                 AND "notification_notification"."recipient" = %s
                 AND "notification_notification"."sent_at" IS NULL)
        ''',
      }),
      dict({
        'origin': list([
          'get_posts_of_a_topic_except_first_one[forum_conversation/shortcuts.py]',
          'TopicView.get_queryset[forum_conversation/views.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT "forum_conversation_post"."id",
                 "forum_conversation_post"."created",
                 "forum_conversation_post"."updated",
                 "forum_conversation_post"."topic_id",
                 "forum_conversation_post"."poster_id",
                 "forum_conversation_post"."anonymous_key",
                 "forum_conversation_post"."subject",
                 "forum_conversation_post"."content",
                 "forum_conversation_post"."approved",
                 "forum_conversation_post"."enable_signature",
                 "forum_conversation_post"."update_reason",
                 "forum_conversation_post"."updated_by_id",
                 "forum_conversation_post"."updates_count",
                 "forum_conversation_post"."username",
                 "forum_conversation_post"."_content_rendered"
          FROM "forum_conversation_post"
          WHERE "forum_conversation_post"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Paginator.count[<site-packages>/django/core/paginator.py]',
          'TopicView.get_context_data[forum_conversation/views.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*)
          FROM
            (SELECT EXISTS
               (SELECT %s AS "a"
                FROM "forum_upvote_upvote" U0
                WHERE (U0."content_type_id" = %s
                       AND U0."object_id" = ("forum_conversation_post"."id")
                       AND U0."voter_id" = %s)
                LIMIT 1) AS "has_upvoted"
             FROM "forum_conversation_post"
             LEFT OUTER JOIN "forum_upvote_upvote" ON ("forum_conversation_post"."id" = "forum_upvote_upvote"."object_id"
                                                       AND ("forum_upvote_upvote"."content_type_id" = %s))
             WHERE ("forum_conversation_post"."topic_id" = %s
                    AND NOT ((NOT "forum_conversation_post"."approved"
                              OR "forum_conversation_post"."id" = %s)))
             GROUP BY "forum_conversation_post"."id") subquery
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get_context_data[forum_conversation/views.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT "forum_polls_topicpoll"."id",
                 "forum_polls_topicpoll"."created",
                 "forum_polls_topicpoll"."updated",
                 "forum_polls_topicpoll"."topic_id",
                 "forum_polls_topicpoll"."question",
                 "forum_polls_topicpoll"."duration",
                 "forum_polls_topicpoll"."max_options",
                 "forum_polls_topicpoll"."user_changes",
                 "forum_polls_topicpoll"."hide_results"
          FROM "forum_polls_topicpoll"
          WHERE "forum_polls_topicpoll"."topic_id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT "forum_tracking_forumreadtrack"."id",
                 "forum_tracking_forumreadtrack"."user_id",
                 "forum_tracking_forumreadtrack"."forum_id",
                 "forum_tracking_forumreadtrack"."mark_time"
          FROM "forum_tracking_forumreadtrack"
          WHERE ("forum_tracking_forumreadtrack"."forum_id" = %s
                 AND "forum_tracking_forumreadtrack"."user_id" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT "forum_tracking_topicreadtrack"."id",
                 "forum_tracking_topicreadtrack"."user_id",
                 "forum_tracking_topicreadtrack"."topic_id",
                 "forum_tracking_topicreadtrack"."mark_time"
          FROM "forum_tracking_topicreadtrack"
          WHERE ("forum_tracking_topicreadtrack"."topic_id" = %s
                 AND "forum_tracking_topicreadtrack"."user_id" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'TopicReadTrack.save[<site-packages>/django/db/models/base.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          INSERT INTO "forum_tracking_topicreadtrack" ("user_id",
                                                       "topic_id",
                                                       "mark_time")
          VALUES (%s, %s, %s) RETURNING "forum_tracking_topicreadtrack"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "forum_conversation_topic"
          INNER JOIN "forum_forum" ON ("forum_conversation_topic"."forum_id" = "forum_forum"."id")
          LEFT OUTER JOIN "forum_tracking_topicreadtrack" ON ("forum_conversation_topic"."id" = "forum_tracking_topicreadtrack"."topic_id")
          LEFT OUTER JOIN "forum_tracking_forumreadtrack" ON ("forum_forum"."id" = "forum_tracking_forumreadtrack"."forum_id")
          WHERE ("forum_conversation_topic"."forum_id" = %s
                 AND (("forum_tracking_topicreadtrack"."mark_time" < ("forum_conversation_topic"."last_post_on")
                       AND "forum_tracking_topicreadtrack"."user_id" = %s)
                      OR ("forum_tracking_forumreadtrack"."mark_time" < ("forum_conversation_topic"."last_post_on")
                          AND "forum_tracking_forumreadtrack"."user_id" = %s
                          AND "forum_tracking_topicreadtrack"."id" IS NULL))
                 AND NOT ("forum_conversation_topic"."id" = %s))
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "forum_tracking_topicreadtrack"
          INNER JOIN "forum_conversation_topic" ON ("forum_tracking_topicreadtrack"."topic_id" = "forum_conversation_topic"."id")
          WHERE ("forum_conversation_topic"."forum_id" = %s
                 AND "forum_tracking_topicreadtrack"."user_id" = %s)
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT COUNT(*) AS "__count"
          FROM "forum_conversation_topic"
          WHERE ("forum_conversation_topic"."forum_id" = %s
                 AND "forum_conversation_topic"."approved")
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          DELETE
          FROM "forum_tracking_topicreadtrack"
          WHERE "forum_tracking_topicreadtrack"."id" IN
              (SELECT U0."id"
               FROM "forum_tracking_topicreadtrack" U0
               INNER JOIN "forum_conversation_topic" U1 ON (U0."topic_id" = U1."id")
               WHERE (U1."forum_id" = %s
                      AND U0."user_id" = %s))
        ''',
      }),
      dict({
        'origin': list([
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          SELECT "forum_tracking_forumreadtrack"."id",
                 "forum_tracking_forumreadtrack"."user_id",
                 "forum_tracking_forumreadtrack"."forum_id",
                 "forum_tracking_forumreadtrack"."mark_time"
          FROM "forum_tracking_forumreadtrack"
          WHERE ("forum_tracking_forumreadtrack"."forum_id" = %s
                 AND "forum_tracking_forumreadtrack"."user_id" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ForumReadTrack.save[<site-packages>/django/db/models/base.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          INSERT INTO "forum_tracking_forumreadtrack" ("user_id",
                                                       "forum_id",
                                                       "mark_time")
          VALUES (%s, %s, %s) RETURNING "forum_tracking_forumreadtrack"."id"
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ForumReadTrack.save[<site-packages>/django/db/models/base.py]',
          'TopicView.get[forum_conversation/views.py]',
        ]),
        'sql': '''
          UPDATE "forum_tracking_forumreadtrack"
          SET "user_id" = %s,
              "forum_id" = %s,
              "mark_time" = %s
          WHERE "forum_tracking_forumreadtrack"."id" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'ForumQuerySet.first[<site-packages>/django/db/models/query.py]',
          'ForumQuerySet.get_main_forum[forum/models.py]',
          'Forum.is_toplevel_discussion_area[forum/models.py]',
          'IfNode[partials/breadcrumb.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_forum"."id",
                 "forum_forum"."created",
                 "forum_forum"."updated",
                 "forum_forum"."parent_id",
                 "forum_forum"."name",
                 "forum_forum"."slug",
                 "forum_forum"."description",
                 "forum_forum"."link",
                 "forum_forum"."link_redirects",
                 "forum_forum"."type",
                 "forum_forum"."direct_posts_count",
                 "forum_forum"."direct_topics_count",
                 "forum_forum"."link_redirects_count",
                 "forum_forum"."last_post_id",
                 "forum_forum"."last_post_on",
                 "forum_forum"."display_sub_forum_list",
                 "forum_forum"."short_description",
                 "forum_forum"."image",
                 "forum_forum"."certified",
                 "forum_forum"."partner_id",
                 "forum_forum"."_description_rendered",
                 "forum_forum"."lft",
                 "forum_forum"."rght",
                 "forum_forum"."tree_id",
                 "forum_forum"."level"
          FROM "forum_forum"
          WHERE ("forum_forum"."level" = %s
                 AND "forum_forum"."lft" = %s)
          ORDER BY "forum_forum"."tree_id" ASC,
                   "forum_forum"."lft" ASC
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'SimpleNode[forum_conversation/partials/poster.html]',
          'IfNode[forum_conversation/partials/poster.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."email",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."identity_provider"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'SimpleNode[forum_conversation/partials/poster.html]',
          'IfNode[forum_conversation/partials/poster.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_conversation_topic"."id",
                 "forum_conversation_topic"."forum_id",
                 "forum_conversation_topic"."poster_id",
                 "forum_conversation_topic"."subject",
                 "forum_conversation_topic"."slug",
                 "forum_conversation_topic"."type",
                 "forum_conversation_topic"."status",
                 "forum_conversation_topic"."approved",
                 "forum_conversation_topic"."posts_count",
                 "forum_conversation_topic"."views_count",
                 "forum_conversation_topic"."last_post_on",
                 "forum_conversation_topic"."first_post_id",
                 "forum_conversation_topic"."last_post_id",
                 "forum_conversation_topic"."created",
                 "forum_conversation_topic"."updated"
          FROM "forum_conversation_topic"
          WHERE "forum_conversation_topic"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'SimpleNode[forum_conversation/partials/poster.html]',
          'IfNode[forum_conversation/partials/poster.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_forum"."id",
                 "forum_forum"."created",
                 "forum_forum"."updated",
                 "forum_forum"."parent_id",
                 "forum_forum"."name",
                 "forum_forum"."slug",
                 "forum_forum"."description",
                 "forum_forum"."link",
                 "forum_forum"."link_redirects",
                 "forum_forum"."type",
                 "forum_forum"."direct_posts_count",
                 "forum_forum"."direct_topics_count",
                 "forum_forum"."link_redirects_count",
                 "forum_forum"."last_post_id",
                 "forum_forum"."last_post_on",
                 "forum_forum"."display_sub_forum_list",
                 "forum_forum"."short_description",
                 "forum_forum"."image",
                 "forum_forum"."certified",
                 "forum_forum"."partner_id",
                 "forum_forum"."_description_rendered",
                 "forum_forum"."lft",
                 "forum_forum"."rght",
                 "forum_forum"."tree_id",
                 "forum_forum"."level"
          FROM "forum_forum"
          WHERE "forum_forum"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[forum_conversation/partials/topic_tags.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT DISTINCT "taggit_tag"."id",
                          "taggit_tag"."name",
                          "taggit_tag"."slug",
                          "taggit_taggeditem"."id"
          FROM "taggit_tag"
          INNER JOIN "taggit_taggeditem" ON ("taggit_tag"."id" = "taggit_taggeditem"."tag_id")
          INNER JOIN "django_content_type" ON ("taggit_taggeditem"."content_type_id" = "django_content_type"."id")
          WHERE ("django_content_type"."app_label" = %s
                 AND "django_content_type"."model" = %s
                 AND "taggit_taggeditem"."object_id" = %s)
          ORDER BY "taggit_taggeditem"."id" ASC
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[forum_conversation/forum_attachments/attachments_images.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "forum_attachments_attachment"
          WHERE "forum_attachments_attachment"."post_id" = %s
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_conversation_post"."id",
                 "forum_conversation_post"."created",
                 "forum_conversation_post"."updated",
                 "forum_conversation_post"."topic_id",
                 "forum_conversation_post"."poster_id",
                 "forum_conversation_post"."anonymous_key",
                 "forum_conversation_post"."subject",
                 "forum_conversation_post"."content",
                 "forum_conversation_post"."approved",
                 "forum_conversation_post"."enable_signature",
                 "forum_conversation_post"."update_reason",
                 "forum_conversation_post"."updated_by_id",
                 "forum_conversation_post"."updates_count",
                 "forum_conversation_post"."username",
                 "forum_conversation_post"."_content_rendered"
          FROM "forum_conversation_post"
          WHERE "forum_conversation_post"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[forum_conversation/forum_attachments/attachments_detail.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT %s AS "a"
          FROM "forum_attachments_attachment"
          WHERE "forum_attachments_attachment"."post_id" = %s
          LIMIT 1
        ''',
      }),
      dict({
        'origin': list([
          'IfNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_member_forumprofile"."id",
                 "forum_member_forumprofile"."user_id",
                 "forum_member_forumprofile"."avatar",
                 "forum_member_forumprofile"."signature",
                 "forum_member_forumprofile"."posts_count",
                 "forum_member_forumprofile"."linkedin",
                 "forum_member_forumprofile"."cv",
                 "forum_member_forumprofile"."search",
                 "forum_member_forumprofile"."region",
                 "forum_member_forumprofile"."internship_duration",
                 "forum_member_forumprofile"."updated_at",
                 "forum_member_forumprofile"."_signature_rendered"
          FROM "forum_member_forumprofile"
          WHERE "forum_member_forumprofile"."user_id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[forum_conversation/partials/posts_list.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_conversation_post"."id",
                 "forum_conversation_post"."created",
                 "forum_conversation_post"."updated",
                 "forum_conversation_post"."topic_id",
                 "forum_conversation_post"."poster_id",
                 "forum_conversation_post"."anonymous_key",
                 "forum_conversation_post"."subject",
                 "forum_conversation_post"."content",
                 "forum_conversation_post"."approved",
                 "forum_conversation_post"."enable_signature",
                 "forum_conversation_post"."update_reason",
                 "forum_conversation_post"."updated_by_id",
                 "forum_conversation_post"."updates_count",
                 "forum_conversation_post"."username",
                 "forum_conversation_post"."_content_rendered",
                 COUNT("forum_upvote_upvote"."id") AS "upvotes_count",
                 EXISTS
            (SELECT %s AS "a"
             FROM "forum_upvote_upvote" U0
             WHERE (U0."content_type_id" = %s
                    AND U0."object_id" = ("forum_conversation_post"."id")
                    AND U0."voter_id" = %s)
             LIMIT 1) AS "has_upvoted",
                 "forum_conversation_topic"."id",
                 "forum_conversation_topic"."forum_id",
                 "forum_conversation_topic"."poster_id",
                 "forum_conversation_topic"."subject",
                 "forum_conversation_topic"."slug",
                 "forum_conversation_topic"."type",
                 "forum_conversation_topic"."status",
                 "forum_conversation_topic"."approved",
                 "forum_conversation_topic"."posts_count",
                 "forum_conversation_topic"."views_count",
                 "forum_conversation_topic"."last_post_on",
                 "forum_conversation_topic"."first_post_id",
                 "forum_conversation_topic"."last_post_id",
                 "forum_conversation_topic"."created",
                 "forum_conversation_topic"."updated",
                 "forum_forum"."id",
                 "forum_forum"."created",
                 "forum_forum"."updated",
                 "forum_forum"."parent_id",
                 "forum_forum"."name",
                 "forum_forum"."slug",
                 "forum_forum"."description",
                 "forum_forum"."link",
                 "forum_forum"."link_redirects",
                 "forum_forum"."type",
                 "forum_forum"."direct_posts_count",
                 "forum_forum"."direct_topics_count",
                 "forum_forum"."link_redirects_count",
                 "forum_forum"."last_post_id",
                 "forum_forum"."last_post_on",
                 "forum_forum"."display_sub_forum_list",
                 "forum_forum"."short_description",
                 "forum_forum"."image",
                 "forum_forum"."certified",
                 "forum_forum"."partner_id",
                 "forum_forum"."_description_rendered",
                 "forum_forum"."lft",
                 "forum_forum"."rght",
                 "forum_forum"."tree_id",
                 "forum_forum"."level",
                 "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."email",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."identity_provider",
                 T6."id",
                 T6."password",
                 T6."last_login",
                 T6."is_superuser",
                 T6."username",
                 T6."first_name",
                 T6."last_name",
                 T6."email",
                 T6."is_staff",
                 T6."is_active",
                 T6."date_joined",
                 T6."identity_provider",
                 "forum_conversation_certifiedpost"."id",
                 "forum_conversation_certifiedpost"."created",
                 "forum_conversation_certifiedpost"."updated",
                 "forum_conversation_certifiedpost"."topic_id",
                 "forum_conversation_certifiedpost"."post_id",
                 "forum_conversation_certifiedpost"."user_id"
          FROM "forum_conversation_post"
          INNER JOIN "forum_conversation_topic" ON ("forum_conversation_post"."topic_id" = "forum_conversation_topic"."id")
          LEFT OUTER JOIN "forum_upvote_upvote" ON ("forum_conversation_post"."id" = "forum_upvote_upvote"."object_id"
                                                    AND ("forum_upvote_upvote"."content_type_id" = %s))
          INNER JOIN "forum_forum" ON ("forum_conversation_topic"."forum_id" = "forum_forum"."id")
          LEFT OUTER JOIN "users_user" ON ("forum_conversation_post"."poster_id" = "users_user"."id")
          LEFT OUTER JOIN "users_user" T6 ON ("forum_conversation_post"."updated_by_id" = T6."id")
          LEFT OUTER JOIN "forum_conversation_certifiedpost" ON ("forum_conversation_post"."id" = "forum_conversation_certifiedpost"."post_id")
          WHERE ("forum_conversation_post"."topic_id" = %s
                 AND NOT ((NOT "forum_conversation_post"."approved"
                           OR "forum_conversation_post"."id" = %s)))
          GROUP BY "forum_conversation_post"."id",
                   "forum_conversation_topic"."id",
                   "forum_forum"."id",
                   "users_user"."id",
                   T6."id",
                   "forum_conversation_certifiedpost"."id"
          ORDER BY "forum_conversation_post"."created" ASC
          LIMIT 10
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[forum_conversation/partials/posts_list.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_attachments_attachment"."id",
                 "forum_attachments_attachment"."post_id",
                 "forum_attachments_attachment"."file",
                 "forum_attachments_attachment"."comment"
          FROM "forum_attachments_attachment"
          WHERE "forum_attachments_attachment"."post_id" IN (%s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s,
                                                             %s)
        ''',
      }),
      dict({
        'origin': list([
          'ForNode[forum_conversation/partials/posts_list.html]',
          'IncludeNode[forum_conversation/topic_detail.html]',
          'WithNode[forum_conversation/topic_detail.html]',
          'BlockNode[board_base.html]',
          'BlockNode[layouts/base.html]',
          'ExtendsNode[board_base.html]',
          'ExtendsNode[forum_conversation/topic_detail.html]',
        ]),
        'sql': '''
          SELECT "forum_member_forumprofile"."id",
                 "forum_member_forumprofile"."user_id",
                 "forum_member_forumprofile"."avatar",
                 "forum_member_forumprofile"."signature",
                 "forum_member_forumprofile"."posts_count",
                 "forum_member_forumprofile"."linkedin",
                 "forum_member_forumprofile"."cv",
                 "forum_member_forumprofile"."search",
                 "forum_member_forumprofile"."region",
                 "forum_member_forumprofile"."internship_duration",
                 "forum_member_forumprofile"."updated_at",
                 "forum_member_forumprofile"."_signature_rendered"
          FROM "forum_member_forumprofile"
          WHERE "forum_member_forumprofile"."user_id" IN (%s)
        ''',
      }),
    ]),
  })
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-b-[PK of Forum]/">Forum B</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_toplevel_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[documentation_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-[PK of Forum]/">D Category</a>
                      </li>
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-forum-[PK of Forum]/">D Category - Forum</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
